--- a/index-service/src/main/resources/application.yml
+++ b/index-service/src/main/resources/application.yml
@@ -8,6 +8,13 @@ spring:
     loadbalancer:
       retry:
         enabled: true
+  zipkin:
+    base-url: http://localhost:8876
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1.0
 eureka:
   client:
     service-url:
@@ -24,7 +31,7 @@ feign:
     enabled: true
 
 ##配置调用product-service服务采用的负载均衡策略
-#product-service:
+#PRODUCT-SERVICE:
 #  ribbon:
 #    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
 management:
@@ -32,3 +39,8 @@ management:
     web:
       exposure:
         include: '*'
+logging:
+  level:
+    root: info
+    org.springframework.web.servlet.DispatcherServlet: DEBUG
+    org.springframework.cloud.sleuth: DEBUG
