--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>gateway-server</module>
         <module>config-server</module>
         <module>config-client</module>
+        <module>zipkin-server</module>
     </modules>
 
     <parent>
