--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -1,6 +1,13 @@
 spring:
   application:
     name: product-service
+  zipkin:
+    base-url: http://localhost:8876
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1.0
 ---
 spring:
   profiles: productService1
@@ -29,3 +36,8 @@ eureka:
 #    lease-renewal-interval-in-seconds: 30
 #    lease-expiration-duration-in-seconds: 90
 
+logging:
+  level:
+    root: info
+    org.springframework.web.servlet.DispatcherServlet: DEBUG
+    org.springframework.cloud.sleuth: DEBUG
